New vhost template, updating sample

--- a/sophie.sample.ini
+++ b/sophie.sample.ini
@@ -1,6 +1,6 @@
 [paths]
-# ex. /etc/apache2/conf-available/, web server config directory
-http_conf_folder = /etc/apache2/conf-available/
+# ex. /etc/apache2/sites-available/, web server config directory
+http_conf_folder = /etc/apache2/sites-available/
 
 # ex. /etc/apache2/conf-available/vhost.tpl, config template file
 http_conf_tpl = /etc/apache2/conf-available/vhost.tpl
@@ -12,7 +12,7 @@ http_www_path = /var/www/
 # the final path would be /var/www/{vhost_name}/public_html
 # or /var/www/{vhost_name}/public_html/public
 # it can be empty
-http_public_path = public/
+http_public_path = public_html/
 
 # ex. /var/repos/
 git_repo_base_path = /var/repos/
