Refactoring, splitting sophie into three class Http, Git and Sophie,

--- a/sophie.sample.ini
+++ b/sophie.sample.ini
@@ -21,10 +21,13 @@ git_repo_base_path = /var/repos/
 git_repo_conf_tpl = /var/repos/post-receive.tpl
 
 # ex. public_html/, set this to your vhost root folder
+# This must be in sync with http_public_path. If your http_public_path is public_html/ you must add the same here
+# If it is public_html/public_whatever/ the git_checkout_path must be set to public_html/
 git_checkout_path = public_html/
 git_executable = git
 
 [tools]
 enable_vhost_creation = True
 enable_git_creation = True
+enable_public_path = False
 enable_chown = False
