--- a/sophie.sample.ini
+++ b/sophie.sample.ini
@@ -11,8 +11,8 @@ http_www_path = /var/www/
 # ex. public_html/ or public_html/public,
 # the final path would be /var/www/{vhost_name}/public_html
 # or /var/www/{vhost_name}/public_html/public
-# it can be empty
-http_public_path = public_html/
+# it can also be empty
+http_document_root = public_html/
 
 # ex. /var/repos/
 git_repo_base_path = /var/repos/
@@ -21,7 +21,7 @@ git_repo_base_path = /var/repos/
 git_repo_conf_tpl = /var/repos/post-receive.tpl
 
 # ex. public_html/, set this to your vhost root folder
-# This must be in sync with http_public_path. If your http_public_path is public_html/ you must add the same here
+# This must be in sync with http_document_root. If your http_document_root is public_html/ you must add the same here
 # If it is public_html/public_whatever/ the git_checkout_path must be set to public_html/
 git_checkout_path = public_html/
 git_executable = git
