Changing variable names

--- a/sophie.sample.ini
+++ b/sophie.sample.ini
@@ -1,16 +1,17 @@
 [paths]
-# ex. /etc/apache2/sites-available/, web server config directory
+# ex. /etc/apache2/sites-available/, web server sites config directory
 http_conf_folder = /etc/apache2/sites-available/
 
 # ex. /etc/apache2/sites-available/vhost.tpl, config template file
 http_conf_tpl = /etc/apache2/sites-available/vhost.tpl
 
 # ex. /var/www/
-http_www_path = /var/www/
+#     /var/www/{vhost_name}
+http_server_root = /var/www/
 
 # ex. public_html/ or public_html/public,
-# the final path would be /var/www/{vhost_name}/public_html
-# or /var/www/{vhost_name}/public_html/public
+#     /var/www/{vhost_name}/public_html
+#     /var/www/{vhost_name}/public_html/public
 # it can also be empty
 http_document_root = public_html/
 
